# narmail

./: pyproject.toml
src/narmail/: __init__.py  config.py  extensions.py  run.py
src/narmail/migrations/versions/: 97cabd721223_adds_messages_table.py  9fb7c3823579_adds_foreign_key_to_messages.py  accb3da6cfc6_adds_created_and_updated_to_receiver.py  f7a5063906ce_create_receivers.py
src/narmail/models/: __init__.py  message.py  receiver.py
